chore: add maven dependency to remove warnings